--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,25 +1,29 @@
 .header {
     overflow: hidden;
     height: 60px;
+    font-size: 15px;
 }
 
-.header .toggleIcon {
+.header .logoName:hover {
+    background-color: white;
+}
+
+.header .toggleIconContainer {
     display: none;
 }
 
 .header a {
-    float: left;
     color: black;
     text-align: center;
-    padding: 14px 10px;
+    padding: 20px 10px 8px 10px;
     text-decoration: none;
-    font-size: 17px;
+    font-weight: 400;
 }
 
 .header .logoName {
     font-size: 25px;
     font-weight: 500;
-
+    padding: 10px 10px 18px 10px;
 }
 
 .header a:hover {
@@ -27,15 +31,13 @@
     color: black;
 }
 
-.header .logoName:hover {
-    background-color: white;
+.header .searchIconContainer {
+    display: none;
 }
 
 .header .loginIcon {
     display: none;
 }
-
-
 
 .header a.active {
     background-color: #04AA6D;
@@ -45,15 +47,28 @@
 @media only screen and (max-width: 576px) {
     .header {
         overflow: hidden;
-        height: 60px;
+        height: 65.5px;
         display: flex;
     }
 
-    .header button {
-        background-color: white;
+    .header a {
+        color: black;
+        text-align: center;
+        padding: 12px 10px;
+        text-decoration: none;
+        font-weight: 400;
     }
 
-    .header .toggleIcon {
+    .header button.notActiveButton {
+        background-color: white;
+        border: none;
+    }
+
+    .header button.activeButton {
+        background-color: gainsboro;
+    }
+
+    .header .toggleIconContainer {
         width: fit-content;
         display: inline;
         position: absolute;
@@ -61,18 +76,133 @@
         left: 0;
     }
 
+    .header .logoName {
+        font-size: 25px;
+        font-weight: 500;
+        padding: 14px 10px;
+    }
 
-    .header .menu {
+    .header .menu1 {
+        display: none;
+    }
+
+    .header .menu2 {
         position: absolute;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        top: 60px;
+        top: 55px;
+        left: 0;
+        background-color: gainsboro;
     }
 
-    .header .Search {
+    .header .searchIconContainer {
+        display: none;
+    }
+
+    .header .Search1 {
+        display: none;
+    }
+
+    .header .Search2 {
         position: absolute;
-        top: 328px;
+        height: 50px;
+        top: 285px;
+        left: 0;
+        background-color: gainsboro;
+    }
+
+    .header .cart {
+        width: fit-content;
+        display: inline;
+        position: absolute;
+        top: 5px;
+        right: 60px;
+    }
+
+    .header .loginIcon {
+        width: fit-content;
+        display: inline;
+        position: absolute;
+        top: 5px;
+        right: 10px;
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 992px) {
+    .header {
+        overflow: hidden;
+        height: 65.5px;
+        display: flex;
+    }
+
+    .header a {
+        color: black;
+        text-align: center;
+        padding: 12px 10px;
+        text-decoration: none;
+        font-weight: 400;
+    }
+
+    .header .logoName {
+        font-size: 25px;
+        font-weight: 500;
+        padding: 14px 10px;
+    }
+
+    .header button.notActiveButton {
+        background-color: white;
+        border: none;
+    }
+
+    .header button.activeButton {
+        background-color: gainsboro;
+    }
+
+    .header .toggleIconContainer {
+        width: fit-content;
+        display: inline;
+        position: absolute;
+        top: 15px;
+        left: 0;
+    }
+
+    .header .menu1 {
+        display: none;
+    }
+
+    .header .menu2 {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        top: 55px;
+        left: 2px;
+        background-color: gainsboro;
+    }
+
+    .header .searchIconContainer {
+        width: fit-content;
+        display: inline;
+        position: absolute;
+        top: 17px;
+        right: 115px;
+    }
+
+    .searchButton {
+        border: none;
+        background-color: white;
+    }
+
+    .header .Search1 {
+        display: none;
+    }
+
+    .header .Search3 {
+        position: absolute;
+        width: 200px;
+        right: 170px;
+        top: 10px;
     }
 
     .header .cart {
