contact and news

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -4,7 +4,7 @@
 
 .introduceImage {
     width: 100%;
-    background-image: url('../../assets/images/traxanh0do.png');
+    background-image: url('../assets/images/traxanh0do.png');
     background-repeat: no-repeat;
     background-size: contain;
 }
