--- a/src/components/Comment/styles.css
+++ b/src/components/Comment/styles.css
@@ -1,5 +1,8 @@
 .ui.comments:last-child  {
     margin-left: 30rem;
+    border: 1px solid rgb(210, 210, 210);
+    border-radius: 10px;
+    padding: 20px;
 }
 
 @media only screen and (max-width: 576px) {
