sign in và sign up

--- a/frontend/src/pages/Signup/styles.css
+++ b/frontend/src/pages/Signup/styles.css
@@ -1,7 +1,13 @@
-.bg {
-    background-color: #eee;
-}
-
 .bd {
     border-radius: 25px;
+    margin-top: 25px;
+}
+
+.bd .error1 {
+    color: red;
+    display: none;
+}
+
+.bd .error2 {
+    color: red;
 }
