--- a/frontend/src/admin_pages/Introduction/styles.css
+++ b/frontend/src/admin_pages/Introduction/styles.css
@@ -1,3 +1,11 @@
+.fit {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    width: 100%;
+}
+
 .hero-image {
     background: green;
     height: 50%;
@@ -20,6 +28,8 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100px;
 }
+
+
 
 .description1 {
     font-size: 20px;
