--- a/frontend/src/components/Footer/styles.css
+++ b/frontend/src/components/Footer/styles.css
@@ -17,7 +17,7 @@
 }
 
 .footer__information .footer__ContactInfo {
-    width: 25%;
+    width: 45%;
     margin-top: 20px;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .footer__information .footer__pay--ship {
-    width: 25%;
+    width: 45%;
     margin-top: 20px;
 }
 
@@ -72,4 +72,35 @@
     height: fit-content;
     padding: 10px;
     padding-left: 5%;
+}
+
+@media only screen and (max-width: 576px) {
+    .footer {
+        width: 100%;
+        height: 600px;
+        background-color: rgb(19, 19, 19);
+        display: flex;
+        flex-direction: column;
+        color: white;
+        font-size: 15px;
+    }
+
+    .footer .footer__information {
+        width: 100%;
+        flex-grow: 1;
+        padding-left: 5%;
+        padding-right: 5%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer__information .footer__pay--ship {
+        width: 90%;
+        margin-top: 20px;
+    }
+
+    .footer__information .footer__pay--ship {
+        width: 90%;
+        margin-top: 20px;
+    }
 }
