--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 2000px) {
     .header {
         /* overflow: hidden; */
-        height: 65.5px;
+        height: 60px;
         font-size: 15px;
     }
 
@@ -64,7 +64,7 @@
 @media only screen and (max-width: 576px) {
     .header {
         overflow: hidden;
-        height: 65.5px;
+        height: 60px;
         display: flex;
     }
 
@@ -100,7 +100,7 @@
     }
 
     .header .menu1 {
-        display: none;
+        display: none !important;
     }
 
     .header .menu2 {
@@ -111,6 +111,7 @@
         top: 55px;
         left: 0;
         background-color: gainsboro;
+        z-index: 15;
     }
 
     .header .searchIconContainer {
@@ -118,7 +119,7 @@
     }
 
     .header .Search1 {
-        display: none;
+        display: none !important;
     }
 
     .header .Search2 {
@@ -172,7 +173,7 @@
 @media only screen and (min-width: 576px) and (max-width: 992px) {
     .header {
         overflow: hidden;
-        height: 65.5px;
+        height: 60px;
         display: flex;
     }
 
@@ -208,7 +209,7 @@
     }
 
     .header .menu1 {
-        display: none;
+        display: none !important;
     }
 
     .header .menu2 {
@@ -219,6 +220,7 @@
         top: 55px;
         left: 2px;
         background-color: gainsboro;
+        z-index: 15;
     }
 
     .header .searchIconContainer {
@@ -235,7 +237,11 @@
     }
 
     .header .Search1 {
-        display: none;
+        display: none !important;
+    }
+
+    .header .Search2 {
+        display: none !important;
     }
 
     .header .Search3 {
